# creations

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: blockapp-build.yml  build-release.yml  desk-stickies-build.yml  editor-universal-build.yml  float-timer-build.yml  math-dojo-build.yml  perf-overlay-build.yml  status-performance-build.yml  universal-editor-build.yml
Editor Universal/chrome-extension/: background.js  manifest.json
Relógio Universal/: Controle.txt  Float Timer.spec  Relogio Universal.spec  circular_widget.py  create_icons.py  installer.iss  main.py  settings.py  timer_logic.py
Status de Performance/: Controle.txt  config_window.py  hardware_monitor.py  hwinfo_reader.py  main.py  overlay.py  settings.json
blockapp/: .gitignore  README.md  main.py
desk-stickies/: README.md  index.html  package-lock.json  package.json
desk-stickies/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
desk-stickies/src-tauri/capabilities/: default.json
desk-stickies/src-tauri/migrations/: 001_initial.sql
desk-stickies/src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  tray.rs  vibrancy.rs  windows.rs
float-timer/: Controle.txt  circular_widget.py  create_icons.py  installer.iss  main.py  settings.json  settings.py  timer_logic.py
glass-post-its/: README.md  package-lock.json  package.json
perf-overlay/: Controle.txt  config_window.py  hardware_monitor.py  hwinfo_reader.py  main.py  overlay.py  requirements.txt
(+123 files in other folders)
